# CMake-codecov

src/: CMakeLists.txt
src/bar/: CMakeLists.txt
src/libgen/: CMakeLists.txt  gen.c.in  gen.h.in
